@@ -9,18 +9,15 @@ import java.util.stream.Stream;
 
 public class FileReader {
 
-    public void readFile() {
+    public void readFile(final String fileName) throws FileReaderException {
         ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
 
-        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
             fileLines.forEach(System.out::println);
-        } catch (IOException e) {
-            System.out.println("Oh no! Something went wrong! Error:" + e);
+        } catch (Exception e) {
+            throw new FileReaderException();
         } finally {
             System.out.println("I am gonna be here... always!");
         }
-
-        System.out.println(file.getPath());
     }
 }
